Avoid various warnings Use Base64 from Axis instead of the "secret" one from sun.misc
git-svn-id: http://taverna.googlecode.com/svn@5909 bf327186-88b3-11dd-a302-d386e5130c1c